# iblock

./: .gitignore  .oppbuildspec  .oppfeatures  .project  CONTRIBUTING.md  LICENSE  Makefile  stats
analysis/: .gitignore  bnp.ipynb  perfcomp.ipynb  selfish-Copy1.ipynb  selfish-orig.ipynb  selfish.ipynb  snp.ipynb  standard.ipynb
doc/: .gitignore  Makefile.am  abstract.tex  bibliography.bib  configure.ac  presentation.tex  thesis.cls  thesis.tex  thesis.xmpdata
doc/chapters/: background.tex  conclusions.tex  implementation.tex  intro.tex  math.tex  next.tex  performance.tex  pocs.tex  testing.tex
doc/chapters/background/: bitcoin.tex  omnetpp.tex  related.tex  simulators.tex
doc/chapters/implementation/: global.tex  interactions.tex  next.tex  node.tex  objects.tex  overview.tex  statistics.tex
doc/chapters/intro/: organization.tex
doc/chapters/next/: gossip.tex  inet.tex
doc/chapters/performance/: comparison.tex  evaluation.tex  optimizations.tex
doc/chapters/pocs/: eclipse.tex  general.tex  selfish.tex
doc/chapters/testing/: fingerprints.tex  leaks.tex  manual.tex  smoke.tex
doc/drawio/: diagrams.drawio  iblock.drawio  opparch.drawio  other.drawio
doc/img/: bignet-exec-time.eps  bignet-mem-usage.eps  blocksim-comp-168.eps  blocksim-comp-full.eps  scaling-both-perf.eps  scaling-nodes-perf.eps  standard-balance.eps  standard-rewards.eps
records/: record.sh  stat.sh
simulations/: .gitignore  BitcoinNetwork.ned  PingPongNetwork.ned  SelfishMining.ned  Small.ned  Test1.ned  Test2.ned  Test3.ned  Test4.ned  omnetpp.ini  package.ned  perf.ini  pocs.ini  (+4 more)
(+244 files in other folders)
